<resources>
    <string name="app_name">Color Formulation for Maxillofacial Elastomer</string>
    <string name="action_settings">Configurações</string>
    <string name="edit_L">Valor de L</string>
    <string name="edit_a">Valor de a</string>
    <string name="edit_b">Valor de b</string>
    <string name="button_send">Enviar</string>
    <string name="edit_grams">Peso da prótese (g)</string>
    <string name="edit_thickness">Espessura (mm)</string>
    <string name="text_background">Fundo</string>
    <string name="select_region">Selecione a região da imagem</string>
    <string name="confirm">Confirmar</string>
    <string name="select_imagem">Selecionar imagem</string>
    <string name="clear">Limpar</string>
    <!-- Strings used for fragments for navigation -->

</resources>
