<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="selectCromossomes"
        android:text="@string/button_send"
        app:layout_constraintEnd_toEndOf="@+id/grams_prosthesis"
        app:layout_constraintStart_toStartOf="@+id/grams_prosthesis"
        app:layout_constraintTop_toBottomOf="@+id/grams_prosthesis" />

    <EditText
        android:id="@+id/value_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_a"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/value_L"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/value_L"
        app:layout_constraintTop_toBottomOf="@+id/value_L" />

    <EditText
        android:id="@+id/value_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_b"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/value_a"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/value_a"
        app:layout_constraintTop_toBottomOf="@+id/value_a" />

    <EditText
        android:id="@+id/grams_prosthesis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_grams"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/value_a"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/value_a"
        app:layout_constraintTop_toBottomOf="@+id/value_b" />

    <EditText
        android:id="@+id/value_L"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_L"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>